Fix editor overflow issue (#16775)

--- a/src/core_plugins/kibana/public/visualize/editor/styles/_editor.less
+++ b/src/core_plugins/kibana/public/visualize/editor/styles/_editor.less
@@ -23,6 +23,15 @@
     }
   }
 
+  .default-vis-editor {
+    // Prevent the default editor from overflowing. Without that you can cause
+    // a weird issue where the complete page can be scrolled out of view if
+    // the editor within the sidebar is too height.
+    overflow-y: hidden;
+    flex: 1 1 auto;
+    display: flex;
+  }
+
   .collapsible-sidebar {
     .flex-parent(0, 0, auto);
     margin-right: 10px;
